--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <!-- This html document uses EJS -->
+
 <html>
+     <!-- Required meta tags -->
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+ 
+     <!-- Bootstrap CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+     <!-- jQuery -->
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+     <!-- Popper.js -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+     <!-- Bootstrap JavaScript -->
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
     <head>
         <!-- heads.ejs -->
         <%- include('../partials/head'); %>
@@ -46,6 +62,39 @@
                 </div>
             </div>
         </div>
-        
+        <div id="home3">
+            <div class="transparent-background">
+                <div id="culture-and-festivals11">
+                    <p class="font-white" id="title">EXPLORE ILOILO</p>
+            <div class = "card-container">
+                <div class = "homecard">
+                    <img src="/img/placeholder.jpg" class="homecardimg" alt="">
+                    <div class = "homecardimgbody">
+                        <h1 class = "homecardtitle">ILOILO CITY</h1>
+                        <p class = "homecardinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore ad necessitatibus eaque numquam rem molestias placeat ratione dolor sequi, debitis sit totam dolorum accusantium cupiditate modi, consequatur exercitationem sed culpa.</p>
+                        <button class="buttoncard">Learn More</button>
+                    </div>
+                </div>
+                <div class = "homecard">
+                    <img src="/img/placeholder.jpg" class="homecardimg" alt="">
+                    <div class = "homecardimgbody">
+                        <h1 class = "homecardtitle">ILOILO CITY</h1>
+                        <p class = "homecardinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore ad necessitatibus eaque numquam rem molestias placeat ratione dolor sequi, debitis sit totam dolorum accusantium cupiditate modi, consequatur exercitationem sed culpa.</p>
+                        <button class="buttoncard">Learn More</button>
+                    </div>
+                </div>
+
+                <div class = "homecard">
+                    <img src="/img/placeholder.jpg" class="homecardimg" alt="">
+                    <div class = "homecardimgbody">
+                        <h1 class = "homecardtitle">ILOILO CITY</h1>
+                        <p class = "homecardinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore ad necessitatibus eaque numquam rem molestias placeat ratione dolor sequi, debitis sit totam dolorum accusantium cupiditate modi, consequatur exercitationem sed culpa.</p>
+                        <button class="buttoncard">Learn More</button>
+                    </div>
+                </div>
+            </div>
+            </div>
+            </div>
+        </div>
     </body>
 </html>
