--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -1,19 +1,27 @@
-<div id = "carousel-body">
-    <div class = "carousel">
-        <div class = "card">
-            <img src = "/img/placeholder.jpg"/>
-        </div>
-        <div class = "card">
-            <img src = "/img/placeholder.jpg"/>
-        </div>
-        <div class = "card">
-            <img src = "/img/placeholder.jpg"/>
-        </div>
-        <div class = "card">
-            <img src = "/img/placeholder.jpg"/>
-        </div>
 
-        <button id = "btn next">></button>
-        <button id = "btn prev"><</button>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/img/paraw-regatta.png" class="d-block w-100" alt="..." style="width: 500px;">
+      </div>
+      <div class="carousel-item">
+        <img src="/img/tabucan.png" class="d-block" alt="d-block w-100" style="width: 500px;">
+      </div>
+      <div class="carousel-item">
+        <img src="/img/placeholder.jpg" class="d-block" alt="d-block w-100" style="width: 500px;">    
+      </div>
     </div>
-</div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
