Added video background to the home page
Need only to center the text for the home page.

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -31,6 +31,12 @@
         <div id="home1">
             <div class="transparent-background">
                 <div id="home11">
+                    <div class="video-container">
+                        <video autoplay loop muted>
+                          <source src="/img/bgvid_1.mp4" type="video/mp4">
+                        </video>
+                      </div>
+                      
                     <p class="font-white" id="title">ABOUT ILOILO </p>
                     <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf parchment wingardium. 
                         Wand betrayal parseltongue soul detention elf lion back his. 
