--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -254,18 +254,33 @@ ul {
 /* HOME PAGE */
 
 #home1 {
-    background-image: url("/img/paraw-regatta.png");
+    /* background-image: url("/img/paraw-regatta.png"); */
     background-repeat: no-repeat;
     /*background-attachment: fixed;*/
     background-position: center;
     background-size: cover;
     height: 800px;
 }
+.video-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Ensures the video is behind other content */
+  }
+  
+  .video-container video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the video covers the entire container */
+  }
 
+  
 .transparent-background {
     display: flex;
     align-items: center;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.5);
     height: 100%;
     width: 100%;
 }
@@ -517,10 +532,11 @@ ul {
 
 .carousel {
     width: 100%;
-    max-width: 800px;
+    max-width: 700px;
     height: 350px;
-    position: relative;
+    position:relative;
     overflow: hidden;
+    object-fit: cover;
 }
 
 .card img {
