--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -14,6 +14,7 @@ li {
 
 body {
     margin: 0px;
+    min-height: 500px;
     /*
     Inverts the color
     filter: invert(1);
@@ -209,21 +210,24 @@ input[type=search] {
 
 
 
-/* SIDE NAVIGATION BAR */
+/******************
+
+SIDE NAVIGATION BAR 
+
+******************/
 
 #side-nav-bar {
-    z-index: 1;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    top: 25px;
     position: fixed;
     width: 85px;
     height: 100%;
-    visibility: hidden;
     background: #1B1B1B;
+    transition: transform 0.2s ease-in-out;
+    transform: translateX(-100px);
 }
-
 
 .side-child {
     display: flex;
@@ -232,11 +236,23 @@ input[type=search] {
     list-style-type: none;
 }
 
-.side-child a div p {
+.side-child a div p{
     font-family: sans-serif;
     font-style: Arial;
     font-size: 10px;
     color: white;
+}
+
+.side-child button div img {
+    size: 5px;
+    color: white;
+}
+
+#side-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
 }
 
 button {
@@ -250,6 +266,11 @@ ul {
     padding: 0px;
 }
 
+a:active
+{
+    color: red;
+    font-weight: bold;
+}
 
 /* HOME PAGE */
 
@@ -653,7 +674,7 @@ input:focus {
 #uin-one-third-row
 {
     backdrop-filter: blur(1rem);
-    box-shadow: 1.3rem 1.3rem 1.3rem rgba(0, 0, 0, 0.5)
+    box-shadow: 1.3rem 1.3rem 1.3rem rgba(0, 0, 0, 0.5);
     background-color: rgba(225, 225, 225, 0.5);
     display: flex;
     justify-content: space-around;
