CSS Improvements part 2
In sidebar:
- completed dark transparent cover when sidebar is activated

In forms:
- need for new design to fetch resizing of div past its intended size (ex. button is out of bounds when wrapped text appears)

Ongoing construction:
- highlight link if its page is active

--- a/views/partials/login-form.ejs
+++ b/views/partials/login-form.ejs
@@ -4,7 +4,14 @@
 <input type="password" id="password" name="password" required><br>
 <!--pattern attribute for at least one special character in password-->
 <div class="center-buttons">
+    
+    <span class="font-white" id="small">
+        <% if (messages.error){ %>
+            <%= messages.error%>
+        <% } %>
+    </span>
+
     <input type="submit" id="form-button" value="Login" />
-    <input type="submit" id="form-button" value="Forgot password?" />
-    <a href="/register">Register</a>
+    <!--<input type="submit" id="form-button" value="Forgot password?" />-->
+    <a href="/register" id="form-button">Register</a>
 </div>
