--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,7 +1,7 @@
 /* MAINTENANCE ELEMENTS */
 
 /* *{
-    border: 1px solid black;
+    border: 1px solid white;
 } */
 
 
@@ -40,14 +40,14 @@ body {
     z-index: 1;
 }
 
-@media (max-width: 880px) {
+@media (max-width: 779px) {
     #top-nav-bar {
         justify-content: center;
     }
 
     .top-child {
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding-top: 1px;
+        padding-bottom: 1px;
     }
 
     #side-nav-bar {
@@ -187,6 +187,18 @@ input[type=search] {
     color: #FFFFFF;
 }
 
+#small {
+    display: flex;
+    font-family: Arial, sans-serif;
+    font-style: normal;
+    color: #FFFFFF;
+    font-size: 12px;
+    margin: 5px;
+    text-align: center;
+    word-wrap: normal; 
+    width: 10px;
+}
+
 #greeting>.font-white {
     font-weight: 400;
     font-size: 14px;
@@ -217,7 +229,7 @@ SIDE NAVIGATION BAR
 ******************/
 
 #side-nav-bar {
-    z-index: 2;
+    z-index: 3;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -225,7 +237,7 @@ SIDE NAVIGATION BAR
     width: 85px;
     height: 100%;
     background: #1B1B1B;
-    transition: transform 0.2s ease-in-out;
+    transition: transform 0.2s ease;
     transform: translateX(-100px);
 }
 
@@ -236,7 +248,7 @@ SIDE NAVIGATION BAR
     list-style-type: none;
 }
 
-.side-child a div p{
+.side-child a div p {
     font-family: sans-serif;
     font-style: Arial;
     font-size: 10px;
@@ -246,6 +258,18 @@ SIDE NAVIGATION BAR
 .side-child button div img {
     size: 5px;
     color: white;
+}
+
+#sidebar-cover {
+    z-index: 2;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: visibility 0.1s ease-in-out;
+    visibility: hidden;
 }
 
 #side-menu {
@@ -266,8 +290,7 @@ ul {
     padding: 0px;
 }
 
-a:active
-{
+a:active {
     color: red;
     font-weight: bold;
 }
@@ -282,22 +305,25 @@ a:active
     background-size: cover;
     height: 800px;
 }
+
 .video-container {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1; /* Ensures the video is behind other content */
-  }
-  
-  .video-container video {
+    z-index: -1;
+    /* Ensures the video is behind other content */
+}
+
+.video-container video {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the video covers the entire container */
-  }
+    object-fit: cover;
+    /* Ensures the video covers the entire container */
+}
 
-  
+
 .transparent-background {
     display: flex;
     align-items: center;
@@ -312,7 +338,7 @@ a:active
     align-items: center;
     flex-direction: column;
     text-align: justify;
-    width: 50%;
+    width: 100%;
 }
 
 #home11>#title {
@@ -346,16 +372,19 @@ a:active
     background-size: cover;
     height: 800px;
 }
+
 .card-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; /* or space-between, space-around, etc. */
+    justify-content: center;
+    /* or space-between, space-around, etc. */
     flex-direction: row;
     align-items: center;
-    
-  }
-.homecard{
-    width:320px; 
+
+}
+
+.homecard {
+    width: 320px;
     height: 500px;
     border-radius: 20px;
     border: 8px solid #fff;
@@ -364,39 +393,40 @@ a:active
     margin: 20px;
 }
 
-.homecardimg{
+.homecardimg {
     width: 100%;
     height: 100%;
     overflow: hidden;
     object-fit: cover;
 }
 
-.homecardimgbody{
+.homecardimgbody {
     width: 100%;
     height: 100%;
-    top:0;
+    top: 0;
     right: -300px;
     position: absolute;
     background-color: #1f3d4738;
     backdrop-filter: blur(1rem);
-    border-radius:15px;
+    border-radius: 15px;
     color: #fff;
     padding: 30px;
-    display:flex;
+    display: flex;
     flex-direction: column;
     transition: 1s;
 }
 
-.homecard:hover .homecardimgbody{
+.homecard:hover .homecardimgbody {
     right: 0;
 }
-.homecardtitle{
+
+.homecardtitle {
     text-transform: uppercase;
     font-size: 50px;
     font-weight: 500;
 }
 
-.homecardinfo{
+.homecardinfo {
     font-size: 16px;
     line-height: 25px;
     margin: 40px 0;
@@ -555,7 +585,7 @@ a:active
     width: 100%;
     max-width: 700px;
     height: 350px;
-    position:relative;
+    position: relative;
     overflow: hidden;
     object-fit: cover;
 }
@@ -597,13 +627,13 @@ a:active
                 LOGIN AND REGISTRATION
 ----------------------------------------------------*/
 
-.uin-background {
+html body .uin-background {
     background-image: url("/img/tabucan.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    height: 715px;
+    height: 800px;
 }
 
 .uin-transparent-black {
@@ -623,7 +653,7 @@ a:active
     text-align: left;
     font-size: 50px;
     margin: 0px;
-    max-width: 100%;
+    width: auto;
 }
 
 input[type=text],
@@ -636,6 +666,7 @@ input[type=repassword] {
     margin-bottom: 10px;
     color: white;
     font-family: sans-serif;
+    width: 100%;
 }
 
 input:focus {
@@ -644,23 +675,24 @@ input:focus {
 
 /* Added button card styling */
 
-.buttoncard{
-        /* Styles for the button inside the card */
-        background-color: #b57e07;
-        color: #fff;
-        border: none;
-        padding: 10px 20px;
-        font-size: 16px;
-        font-weight: 600;
-        border-radius: 4px;
-        position: absolute;
-        bottom: 10px;
-        right: 10px;
-        cursor: pointer;
-        font-family: Arial, sans-serif;
-        font-style: normal;
+.buttoncard {
+    /* Styles for the button inside the card */
+    background-color: #b57e07;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 4px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-family: Arial, sans-serif;
+    font-style: normal;
 
 }
+
 #uin-one-third-column {
     display: flex;
     justify-content: space-around;
@@ -671,8 +703,7 @@ input:focus {
     width: 100%;
 }
 
-#uin-one-third-row
-{
+#uin-one-third-row {
     backdrop-filter: blur(1rem);
     box-shadow: 1.3rem 1.3rem 1.3rem rgba(0, 0, 0, 0.5);
     background-color: rgba(225, 225, 225, 0.5);
@@ -685,19 +716,18 @@ input:focus {
     width: 18rem;
     border-radius: 10px;
     margin: 10px;
-    
+
 
 
 }
 
-#uin-one-third-row>div
-{
-    margin-top:-50px;
+#uin-one-third-row>div {
+    margin-top: -50px;
     padding: 10px;
 }
 
-#uin-one-third-row>div>button>img{
-    width: 59px; 
+#uin-one-third-row>div>button>img {
+    width: 59px;
     height: 50px;
 }
 
@@ -725,9 +755,11 @@ input:focus {
     font-size: 15px;
     background-color: #b57e07;
     border-radius: 12px;
+    text-align: center;
+    box-sizing: border-box;
 }
 
-#wrap{
+#wrap {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
