--- a/views/partials/registration-form.ejs
+++ b/views/partials/registration-form.ejs
@@ -8,7 +8,12 @@
 
 <!--pattern attribute for at least one special character in password-->
 <div class="center-buttons">
+    <span class="font-white" id="small">
+        <% if (messages.error){ %>
+            <%= messages.error%>
+        <% } %>
+    </span>
     <input type="submit" id="form-button" value="Sign up" />
     <!-- <input type="submit" id="form-button" value="Forgot password?" /> -->
-    <a href="/login">Login</a>
+    <a href="/login" id="form-button">Login</a>
 </div>
