--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -34,7 +34,7 @@
     <li class="top-child">
         <!--greeting-->
         <div id="greeting">
-            <p class="font-white" id="top">Hi, <%= username %>
+            <p class="font-white" id="top">Hi, <%= username %>!
             </p>
             <p class="font-white" id="bottom">Welcome to <span class="font-peach">Iloilo City!</span></p>
         </div>
