--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -17,11 +17,13 @@
      <!-- Bootstrap JavaScript -->
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
+
     <head>
         <!-- heads.ejs -->
         <%- include('../partials/head'); %>
     </head>
     <body>
+            
         
         <!-- side-nav-bar.ejs -->
         <%- include('../partials/side-nav-bar'); %>
@@ -50,11 +52,11 @@
         </div>
 
         <div id="home2">
-            <div class="transparent-background">
+            <div class="homebackground">
                 <div class = "two-vertical-panels">
                     <div id = "home22">
-                        <p class="font-white" id="title">THE CITY'S MOST FAMOUS HIGHLIGHTS</p>
-                        <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf parchment wingardium. 
+                        <p class="font-black" id="title">The City's Most Famous <span class="font-peach">HIGHLIGHTS</span></p>
+                        <p class="font-black" id="content"><span class="font-peach">Potter ipsum</span> wand elf parchment wingardium. 
                             Wand betrayal parseltongue soul detention elf lion back his. 
                             Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes. 
                             Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva. 
@@ -69,9 +71,9 @@
             </div>
         </div>
         <div id="home3">
-            <div class="transparent-background">
+            <div class="homebackground">
                 <div id="culture-and-festivals11">
-                    <p class="font-white" id="title">EXPLORE ILOILO</p>
+                    <p class="font-black" id="title">EXPLORE ILOILO</p>
             <div class = "card-container">
                 <div class = "homecard">
                     <img src="/img/placeholder.jpg" class="homecardimg" alt="">
@@ -102,5 +104,8 @@
             </div>
             </div>
         </div>
+
+
+        
     </body>
 </html>
