--- a/views/pages/food.ejs
+++ b/views/pages/food.ejs
@@ -12,11 +12,24 @@
     <%- include('../partials/side-nav-bar'); %>
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
-
+        <div id="foodbg">
+            <div class="transparent-background">
+                <div id="home11">
+                    <p class="font-white" id="secondtitle">THE BEST FOOD IN ILOILO </p>
+                    <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf parchment wingardium. 
+                        Wand betrayal parseltongue soul detention elf lion back his. 
+                        Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes. 
+                        Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva. 
+                        Bat forbidden cabbage parchment sunshine. 
+                        Bag moon ground moon quidditch sight grim.
+                    </p>
+                </div>
+            </div>
+        </div>
             <div id="food1">
                 <div class="transparent-background-title">
                     <div id="food11">
-                        <p class="font-white" id="title">FOOD</p>
+                        <p class="font-white" id="thirdtitle">OUR TOP <span class="font-peach">BITES</span></p>
                         <div class="filter-row">
                             <p class="font-white">Sort By:</p>
                             <button>Name</button>
