--- a/views/partials/dummyfood.ejs
+++ b/views/partials/dummyfood.ejs
@@ -20,8 +20,8 @@
         <img src="/img/placeholder.jpg" width="70" height="80"
         style="object-fit:cover;border-radius:10px;padding-top:1px;">
     <div class="card-body">
-      <h5 class="font-white">Card title</h5>
-      <p class="font-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <h5 class="font-black">Card title</h5>
+      <p class="font-black">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="buttoncard">Go somewhere</a>
     </div>
   </div>
