Changes in festivals and search
In search
- partial layout

In festivals
- deleted cultures

--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -24,7 +24,7 @@
             <p class="font-white">Here are the foods you've viewed</p>
         </div>
         <div id="user_culture">
-            <p class="font-white">Here are the cultures you've shown</p>
+            <p class="font-white">Here are the festivals you've shown</p>
         </div>
         <div id="user_accommodation">
             <p class="font-white">Here are the accommodations you've looked</p>
