--- a/views/partials/side-nav-bar.ejs
+++ b/views/partials/side-nav-bar.ejs
@@ -18,10 +18,10 @@
     </li>
 
     <li class="side-child">
-        <a href="/culture-and-festivals" id="link2">
+        <a href="/festivals" id="link2">
             <div>
-                <img src="/img/culture-and-festivals.png">
-                <p>CULTURE & FESTIVALS</p>
+                <img src="/img/festivals.png">
+                <p>FESTIVALS</p>
             </div>
         </a>
     </li>
