Places and Landmarks Horizontal View
Edited places and landmarks to include horizontal view of items

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -75,31 +75,8 @@
                 <div id="culture-and-festivals11">
                     <p class="font-black" id="title">EXPLORE ILOILO</p>
             <div class = "card-container">
-                <div class = "homecard">
-                    <img src="/img/placeholder.jpg" class="homecardimg" alt="">
-                    <div class = "homecardimgbody">
-                        <h1 class = "homecardtitle">ILOILO CITY</h1>
-                        <p class = "homecardinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore ad necessitatibus eaque numquam rem molestias placeat ratione dolor sequi, debitis sit totam dolorum accusantium cupiditate modi, consequatur exercitationem sed culpa.</p>
-                        <button class="buttoncard">Learn More</button>
-                    </div>
-                </div>
-                <div class = "homecard">
-                    <img src="/img/placeholder.jpg" class="homecardimg" alt="">
-                    <div class = "homecardimgbody">
-                        <h1 class = "homecardtitle">ILOILO CITY</h1>
-                        <p class = "homecardinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore ad necessitatibus eaque numquam rem molestias placeat ratione dolor sequi, debitis sit totam dolorum accusantium cupiditate modi, consequatur exercitationem sed culpa.</p>
-                        <button class="buttoncard">Learn More</button>
-                    </div>
-                </div>
+                <%- include('../partials/dummyhome'); %>
 
-                <div class = "homecard">
-                    <img src="/img/placeholder.jpg" class="homecardimg" alt="">
-                    <div class = "homecardimgbody">
-                        <h1 class = "homecardtitle">ILOILO CITY</h1>
-                        <p class = "homecardinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore ad necessitatibus eaque numquam rem molestias placeat ratione dolor sequi, debitis sit totam dolorum accusantium cupiditate modi, consequatur exercitationem sed culpa.</p>
-                        <button class="buttoncard">Learn More</button>
-                    </div>
-                </div>
             </div>
             </div>
             </div>
