--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -10,25 +10,38 @@
         <%- include('../partials/side-nav-bar'); %>
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
-
-        <div id="places-and-landmarks1">
-            <div class="transparent-background-title">
-                <div id="places-and-landmarks11">
-                    <p class="font-white" id="title">PLACES & LANDMARKS</p>
+        <div id="foodbg">
+            <div id="transparent-background-food">
+                <div id="foodbg1">
+                    <p class="font-white" id="secondtitle">Places and Landmarks</p>
+                    <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf
+                        parchment wingardium.
+                        Wand betrayal parseltongue soul detention elf lion back his.
+                        Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes.
+                        Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva.
+                        Bat forbidden cabbage parchment sunshine.
+                        Bag moon ground moon quidditch sight grim.
+                    </p>
+                </div>
+            </div>
+        </div>
+        
+        <div id="food1">
+            <div id="food11">
+                <div id="food111">
+                    <p class="font-black" id="thirdtitle">Places You Must <span class="font-peach">Visit</span></p>
                     <div class="filter-row">
-                        <p class="font-white">Sort By:</p>
+                        <p class="font-black">Sort By:</p>
                         <button>Name</button>
-                        <button>Reviews</button>
                         <button>Date</button>
                     </div>
+                </div>
                     <!-- Just a dummy to show -->
                     <div id="wrap">
-                        <%- include('../partials/dummyfood'); %>
-                        <%- include('../partials/dummyfood'); %>
-                        <%- include('../partials/dummyfood'); %>
-                        <%- include('../partials/dummyfood'); %>
-                        <%- include('../partials/dummyfood'); %>
-                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummylist'); %>
+                        <%- include('../partials/dummylist'); %>
+                        <%- include('../partials/dummylist'); %>
+                        <%- include('../partials/dummylist'); %>
                     </div>
                 </div>
             </div>
