--- a/views/pages/food.ejs
+++ b/views/pages/food.ejs
@@ -43,7 +43,7 @@
                         <% for (index in foods){%>
                             <div id="uin-one-third-row">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="/img/placeholder.jpg" width="70" height="80"
+                                    <img src=<%= foods[index]['Images Attached']%>width="70" height="80"
                                     style="object-fit:cover;border-radius:10px;padding-top:1px;">
                                 <div class="card-body">
                                   <h5 class="font-black"><%= foods[index]['Title']%></h5>  
