--- a/views/partials/dummyfood.ejs
+++ b/views/partials/dummyfood.ejs
@@ -1,6 +1,6 @@
 
-<div id="uin-one-third-row">
-    <div class="card" style="width: 18rem;">
+<div id="card-group">
+    <div class="card-image" style="width: 18rem;">
         <img src="/img/placeholder.jpg" width="70" height="80"
         style="object-fit:cover;border-radius:10px;padding-top:1px;">
     <div class="card-body">
