--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -339,7 +339,6 @@ a:active {
     background: rgba(0, 0, 0, 0.5);
     height: 100%;
     width: 100%;
-
 }
 
 .homebackground {
@@ -365,13 +364,13 @@ a:active {
     margin: 0px;
 }
 
-#secondtitle {
+#second-title {
     font-weight: 600;
     font-size: 80px;
     margin: 0;
 }
 
-#thirdtitle {
+#third-title {
     font-weight: 600;
     text-align: left;
     font-size: 80px;
@@ -412,7 +411,7 @@ a:active {
     height: 800px;
 }
 
-#foodbg {
+#food-header {
     background-image: url("/img/food1.png");
     background-repeat: no-repeat;
     /*background-attachment: fixed;*/
@@ -421,7 +420,7 @@ a:active {
     height: 750px;
 }
 
-#foodbg1 {
+#food-header-group {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -430,7 +429,7 @@ a:active {
     padding: 50px;
 }
 
-#foodbg1 #content {
+#food-header-group #content {
     width: 1000px;
     padding-left: 10px;
     line-height: 1.5;
@@ -444,6 +443,28 @@ a:active {
     /* or space-between, space-around, etc. */
     flex-direction: row;
     align-items: center;
+}
+
+.card-body
+{
+    padding: 20px;
+    background-color: transparent;
+}
+
+.card-body>h2
+{
+    margin: 0;
+}
+
+.card-body>p {
+    height: 160px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow-y: scroll;
+}
+
+.card-body>p::-webkit-scrollbar {
+    display: none;
 }
 
 .homecard {
@@ -536,7 +557,7 @@ a:active {
 
 /* FOOD PAGE */
 
-#food1 {
+#food-body {
     background-image: url("/img/whitebg.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -552,7 +573,7 @@ a:active {
     width: 100%;
 }
 
-#food11 {
+#food-body-group {
     display: flex;
     justify-content: center;
     align-items: left;
@@ -563,7 +584,7 @@ a:active {
     margin-right: 20px; */
 }
 
-#food11>#title {
+#food-body-group>#title {
     font-weight: 600;
     text-align: left;
     font-size: 50px;
@@ -572,7 +593,7 @@ a:active {
     margin-left: 30px;
 }
 
-#food111 {
+#body-header {
     padding: 50px 50px 0 50px;
 }
 
@@ -832,36 +853,36 @@ input:focus {
     width: 100%;
 }
 
-#uin-one-third-row {
+#card-group {
     backdrop-filter: blur(1rem);
     box-shadow: 1.3rem 1.3rem 1.3rem rgba(0, 0, 0, 0.5);
     background-color: rgba(225, 225, 225, 0.5);
     display: flex;
-    justify-content: space-around;
+    justify-content: start;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     text-align: justify;
-    height: 27rem;
-    width: 18rem;
+    height: 600px;
+    width: 300px;
     border-radius: 10px;
     margin: 10px;
 }
 
-#uin-one-third-row>div {
-    margin-top: -50px;
-    padding: 10px;
+#card-group>div {
+    
 }
 
-#uin-one-third-row>div>button>img {
-    width: 59px;
-    height: 50px;
+.card-image {
+    height: 300px;
+    width: inherit;
 }
 
-#uin-one-third-row>div>#title {
-    font-weight: 600;
-    text-align: left;
-    font-size: 30px;
-    margin: 0px;
+.card-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+
 }
 
 .center {
@@ -906,7 +927,7 @@ input:focus {
     width: 100%;
 }
 
-.center>#form-button:hover{
+.center>#form-button:hover {
     cursor: pointer;
 }
 
@@ -922,8 +943,7 @@ input:focus {
 
 */
 
-#user1
-{
+#user1 {
     background: blue;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -932,8 +952,8 @@ input:focus {
     height: 800px;
     padding: 0;
 }
-#userheader
-{
+
+#userheader {
     background: black;
     height: 80px;
     display: flex;
@@ -941,8 +961,7 @@ input:focus {
     padding: 0 30px 0 30px;
 }
 
-#user_places
-{
+#user_places {
     background: green;
     height: 80px;
     display: flex;
@@ -950,8 +969,7 @@ input:focus {
     padding: 0 30px 0 30px;
 }
 
-#user_food
-{
+#user_food {
     background: yellow;
     height: 80px;
     display: flex;
@@ -959,8 +977,7 @@ input:focus {
     padding: 0 30px 0 30px;
 }
 
-#user_culture
-{
+#user_culture {
     background: violet;
     height: 80px;
     display: flex;
@@ -968,8 +985,7 @@ input:focus {
     padding: 0 30px 0 30px;
 }
 
-#user_accommodation
-{
+#user_accommodation {
     background: palegreen;
     height: 80px;
     display: flex;
@@ -977,6 +993,6 @@ input:focus {
     padding: 0 30px 0 30px;
 }
 
-#user1 div p{
+#user1 div p {
     font-size: 50px;
 }
