Added links for food.
Disabled redirection for foods without links using css.
Added get collection for places and landmarks.

TODO: Add images for places and landmarks, accommodations, and missing
links for the foods.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -843,6 +843,23 @@ input:focus {
 
 }
 
+.disabled_buttoncard{
+    pointer-events: none;
+    background-color: #8d8d8d;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 4px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-family: Arial, sans-serif;
+    font-style: normal;
+}
+
 #row {
     display: flex;
     justify-content: space-around;
