--- a/views/pages/food.ejs
+++ b/views/pages/food.ejs
@@ -39,16 +39,23 @@
                     </div>
                     <!-- For each food from database -->
                     <div id="wrap">
-                        <% var foods = foods %>
-                        <% for (index in foods){%>
+                        <% var food = food %>
+                        <% for (index in food){%>
                             <div id="card-group">
                                 <div class="card-image">
-                                    <img src=<%= foods[index]['Images Attached']%> />
+                                    <img src=<%= food[index]['Images Attached']%> />
                                 </div>
                                 <div class="card-body">
-                                  <h2 class="font-black"><%= foods[index]['Title']%></h5>  
-                                  <p class="font-black"><%= foods[index]['Description'] %></p>
-                                  <a href="#" class="buttoncard">Go somewhere</a>
+                                  <h2 class="font-black"><%= food[index]['Title']%></h5>  
+                                  <p class="font-black"><%= food[index]['Description'] %></p>
+                                  <% var link = food[index]['Link']%>
+                                  <% var card_state = 'buttoncard'%>
+                                  <% if(!link){%>
+                                    <% link = '#'%>
+                                    <% card_state = 'disabled_buttoncard'%>
+                                  <% } %>
+                                  <a href=<%= link%> target="_blank" class=<%= card_state%>>Check Food</a>
+                                
                                 </div>
                             </div>
                         <% } %>
